# knowledge-tree

./: .gitignore  .mcp.json  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.vi.md  SECURITY.md  docker-compose.yml  expand_devops_python_backend.py  expand_frameworks_devops.py  extract_pdf.py  pyproject.toml  skills-lock.json  status.yaml
.agents/: RULES.md  agents.md
.agents/workflows/: audit-coverage.md  build-tree.md  context-audit.md  crawl-roadmap.md  detect-gaps.md  generate-los.md  init.md  map-taxonomy.md  set-project.md  sync-supabase.md  validate-master-tree.md  validate-tree.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  taxonomy_proposal.md
.github/workflows/: deploy.yml
.work/: frontend_knowledge_tree_plan.md  roadmap_alignment_report.md  tree_diff_report.md
docs/ideas/: adaptive-curriculum-proposal-workflow.md  expansion-ideas.md  fullstack-implementation-architecture.md  prerequisite-mining-and-curriculum-schema.md  visual-knowledge-tree-explorer.md
docs/instructions/: ci-cd-deployment.md  how-to-add-new-mcp-server.md
general-context/: adaptive-learning-platform.md  hieu-dinh.md  mlo-knowlege-tree.tsv  version_history.json
mcp/: README.md  main.py  server.py
mcp/servers/: __init__.py  kt_server.py  system_server.py
refs/: README.md
refs/architecture-docs/: Kiến Trúc và Lộ Trình Phát Triển Hệ Thống LearnWell.md  README.md  Tính phù hợp và phổ quát của mô hình phân loại kiến thức học tập.md
refs/database-schemas/: README.md  (+3 more)
scripts/: crawl_roadmap_align.py
(+655 files in other folders)
